# llamacity

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api.md  examples.md  index.html  index.md  installation.html  installation.md  usage.html  usage.md
docs/api/: index.html  index.md
examples/: advanced_usage.py  basic_usage.py
llamacity/: __init__.py  client.py  main.py  utils.py
multi-modal-transformers/: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SUMMARY.md  pyproject.toml  requirements.txt  setup.py
multi-modal-transformers/.github/workflows/: cd.yml  ci.yml  docs.yml
multi-modal-transformers/configs/: base_text_image_model.json
multi-modal-transformers/data/sample/: train.json  val.json
multi-modal-transformers/docs/: Makefile  conf.py  index.rst
multi-modal-transformers/examples/: create_model.py  train_model.py
multi-modal-transformers/scripts/: generate_dummy_images.py
multi-modal-transformers/src/: model_factory.py
multi-modal-transformers/src/config/: __init__.py  model_config.py
multi-modal-transformers/src/data/: __init__.py  dataset.py
multi-modal-transformers/src/losses/: __init__.py  contrastive_loss.py  cross_entropy_loss.py
multi-modal-transformers/src/models/: transformer.py
multi-modal-transformers/src/models/attention/: __init__.py  cross_attention.py  linear_attention.py  sparse_attention.py
multi-modal-transformers/src/models/fusion/: __init__.py  attentional_pooling.py  cross_modal_fusion.py
multi-modal-transformers/src/models/layers/: __init__.py  feed_forward.py  layer_norm.py  positional_encoding.py
multi-modal-transformers/src/utils/: checkpointing.py  logging.py
multi-modal-transformers/tests/: conftest.py  test_attention.py  test_fusion.py  test_layers.py
src/llamacity/: __init__.py
tests/: test_client.py  test_main.py
